--- a/app/src/main/res/layout/activity_eventrides.xml
+++ b/app/src/main/res/layout/activity_eventrides.xml
@@ -68,11 +68,12 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginTop="115dp"
+        android:layout_marginHorizontal="16dp"
         android:tint="@android:color/white"
         app:backgroundTint="@color/carButton"
         app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
+        app:layout_anchorGravity="top|end"
         app:srcCompat="@drawable/ic_directions_car_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
