--- a/app/src/main/res/layout/card_ride.xml
+++ b/app/src/main/res/layout/card_ride.xml
@@ -13,11 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="horizontal"
+        android:weightSum="1"
         android:padding="8dp">
 
         <ImageView
             android:id="@+id/driverPicture"
-            android:layout_width="45dp"
+            android:layout_weight="0.25"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_face_black_24dp"
@@ -25,7 +27,8 @@
             tools:ignore="ContentDescription" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="0.57"
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:orientation="vertical">
@@ -54,6 +57,17 @@
                 tools:text="19:45" />
 
         </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/joinRidePlusButton"
+                android:layout_width="0dp"
+                android:layout_weight="0.18"
+                android:layout_height="wrap_content"
+                app:backgroundTint="@color/colorPrimary"
+                android:src="@drawable/ic_add_black_24dp"
+                android:layout_gravity="center_vertical"
+
+        />
     </LinearLayout>
 
     <!--<android.support.design.widget.FloatingActionButton-->
