--- a/app/src/main/res/layout/activity_join_ride.xml
+++ b/app/src/main/res/layout/activity_join_ride.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="@dimen/fab_margin"
-                android:text="Picked loccation"
+                android:text="Picked location"
         />
         <Button
                 style="@style/Widget.AppCompat.Button.Colored"
