--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -11,22 +11,13 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="RideToGather"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
-
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
-                android:text="Join other people rides"
+                android:text="@string/welcome_screen_2_text"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"/>
