--- a/app/src/main/res/layout/activity_facebook_login.xml
+++ b/app/src/main/res/layout/activity_facebook_login.xml
@@ -9,6 +9,8 @@
 
     <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
+            android:background="@drawable/facebook_login_button_border"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
