--- a/app/src/main/res/layout/activity_join_ride.xml
+++ b/app/src/main/res/layout/activity_join_ride.xml
@@ -23,15 +23,18 @@
         />
 
         <TextView
+                android:id="@+id/pickedLocationTextBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:textSize="25sp"
                 android:layout_margin="@dimen/fab_margin"
+                android:textAlignment="center"
                 android:text="Picked location"
         />
         <Button
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:id="@+id/confirmLocation"
+                android:id="@+id/submitPickupRequest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="200dp"
