--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#00acc1</color>
     <color name="colorPrimaryDark">#007c91</color>
     <color name="colorLight">#5ddef4</color>
-    <color name="colorAccent">#00e1ff</color>
+    <color name="colorAccent">#00acc1</color>
     <color name="greenAccent">#00c853</color>
     <color name="nicePurple">#D81BF0</color>
     <color name="carButton">#02464f</color>
