--- a/app/src/main/res/layout/card_ride.xml
+++ b/app/src/main/res/layout/card_ride.xml
@@ -28,7 +28,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="0.57"
+            android:layout_weight="0.75"
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:orientation="vertical">
@@ -58,7 +58,7 @@
 
         </LinearLayout>
 
-        <android.support.design.widget.FloatingActionButton
+        <!--<android.support.design.widget.FloatingActionButton
                 android:id="@+id/joinRidePlusButton"
                 android:layout_width="0dp"
                 android:layout_weight="0.18"
@@ -67,7 +67,7 @@
                 android:src="@drawable/ic_add_black_24dp"
                 android:layout_gravity="center_vertical"
 
-        />
+        />-->
     </LinearLayout>
 
     <!--<android.support.design.widget.FloatingActionButton-->
