--- a/app/src/main/res/layout/activity_eventrides.xml
+++ b/app/src/main/res/layout/activity_eventrides.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/eventrides_layout"
     tools:context=".EventRidesActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -90,5 +91,15 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintTop_toBottomOf="@+id/tabs_main"/>
 
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_create_ride"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:tint="@android:color/white"
+            app:backgroundTint="@color/carButton"
+            android:layout_gravity="bottom|end"
+            app:srcCompat="@drawable/ic_directions_car_black_24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
