--- a/app/src/main/res/layout/fragment_rides_list.xml
+++ b/app/src/main/res/layout/fragment_rides_list.xml
@@ -3,23 +3,10 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="org.team2.ridetogather.DriverFragment">
+             tools:context="org.team2.ridetogather.RidesListFragment">
 
 
     <include layout="@layout/content_eventrides"/>
 
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="65dp"
-            android:tint="@android:color/white"
-            app:backgroundTint="@color/carButton"
-            android:layout_gravity="bottom|end"
-            app:layout_anchorGravity="bottom|right|end"
-            app:layout_anchor="@id/rides_list_recycler_view"
-            app:srcCompat="@drawable/ic_directions_car_black_24dp"/>
 
 </FrameLayout>
