--- a/app/src/main/res/layout/activity_facebook_login.xml
+++ b/app/src/main/res/layout/activity_facebook_login.xml
@@ -5,6 +5,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:background="@drawable/roadtrip"
+                                             android:id="@+id/facebook_login_layout"
                                              tools:context=".FacebookLoginActivity">
 
     <com.facebook.login.widget.LoginButton
@@ -16,6 +17,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="80dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"/>
 
 
 </android.support.constraint.ConstraintLayout>
