--- a/app/src/main/res/layout/activity_eventrides.xml
+++ b/app/src/main/res/layout/activity_eventrides.xml
@@ -83,7 +83,7 @@
         app:backgroundTint="@color/carButton"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="top|end"
-        app:srcCompat="@drawable/ic_directions_car_black_24dp" />
+        app:srcCompat="@drawable/ic_open_existing_ride" />
     <android.support.v4.view.ViewPager
             android:id="@+id/viewpager_main"
             android:layout_width="match_parent"
@@ -97,9 +97,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:tint="@android:color/white"
             app:backgroundTint="@color/carButton"
             android:layout_gravity="bottom|end"
-            app:srcCompat="@drawable/ic_directions_car_black_24dp"/>
+            app:srcCompat="@drawable/ic_create_ride"/>
 
 </android.support.design.widget.CoordinatorLayout>
