--- a/app/src/main/res/layout/activity_ride_page.xml
+++ b/app/src/main/res/layout/activity_ride_page.xml
@@ -66,7 +66,7 @@
         </LinearLayout>
 
         <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/DriverProfilePic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="80"
