--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,15 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                app:tabMaxWidth="0dp"
+                app:tabGravity="fill"
+                app:tabMode="fixed"
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                app:elevation="6dp"
+                android:layout_height="wrap_content" />
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
