--- a/app/src/main/res/layout/content_eventrides.xml
+++ b/app/src/main/res/layout/content_eventrides.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+              android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".EventRidesActivity"
     tools:showIn="@layout/activity_eventrides">
-
+    <TextView
+            android:id="@+id/tvEmpty"
+            android:visibility="gone"
+            android:textColor="@color/colorPrimary"
+            android:padding="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nothing to display"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rides_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
 
-</android.support.v4.widget.NestedScrollView>
+</LinearLayout>
