--- a/app/src/main/res/layout/user_ride.xml
+++ b/app/src/main/res/layout/user_ride.xml
@@ -23,18 +23,19 @@
         <ImageView
                 android:id="@+id/img"
                 android:src="@drawable/star_slider"
+                android:padding="8dp"
                 android:layout_width="100dp" android:layout_height="100dp"/>
         <TextView
-                android:padding="4dp"
+                android:padding="2dp"
                 android:layout_toRightOf="@id/img"
-                android:textColor="@android:color/black"
+                android:textColor="@color/bg_screen3"
                 android:id="@+id/driverName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:text="" android:textStyle="bold"/>
 
         <TextView
-                android:padding="4dp"
+                android:padding="2dp"
                 android:layout_toRightOf="@id/img"
                 android:layout_below="@id/driverName"
                 android:textColor="@android:color/black"
@@ -44,7 +45,7 @@
                 android:text=""/>
 
         <TextView
-                android:padding="4dp"
+                android:padding="2dp"
                 android:layout_toRightOf="@id/img"
                 android:layout_below="@id/eventName"
                 android:textColor="@android:color/black"
@@ -54,7 +55,7 @@
                 android:text=""/>
 
         <TextView
-                android:padding="4dp"
+                android:padding="2dp"
                 android:layout_toRightOf="@id/img"
                 android:layout_below="@id/eventLocation"
                 android:textColor="@android:color/black"
