--- a/app/src/main/res/layout/user_ride.xml
+++ b/app/src/main/res/layout/user_ride.xml
@@ -23,7 +23,7 @@
         <ImageView
                 android:id="@+id/img"
                 android:src="@drawable/star_slider"
-                android:padding="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_width="100dp" android:layout_height="100dp"/>
         <TextView
                 android:padding="2dp"
