--- a/app/src/main/res/layout/user_event.xml
+++ b/app/src/main/res/layout/user_event.xml
@@ -7,6 +7,8 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         card_view:cardCornerRadius="4dp"
         android:padding="4dp"
         app:cardElevation="2dp"
