--- a/app/src/main/res/layout/fragment_my_rides.xml
+++ b/app/src/main/res/layout/fragment_my_rides.xml
@@ -15,11 +15,11 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Rides..."/>
+            android:text="You are currently not in any ride."/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent"/>
 
 </LinearLayout>
