--- a/app/src/main/res/layout/activity_eventrides.xml
+++ b/app/src/main/res/layout/activity_eventrides.xml
@@ -24,6 +24,7 @@
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:toolbarId="@+id/toolbar"
+                app:expandedTitleTextAppearance="@style/ToolbarLayoutEventRides"
                 tools:title="Josh's Bat-Mitzva">
 
             <LinearLayout
@@ -31,8 +32,8 @@
                     android:layout_height="match_parent"
                     android:gravity="start|top"
                     android:orientation="vertical"
-                    android:padding="10dp"
-                    android:layout_marginBottom="20dp"
+                    android:paddingBottom="4dp"
+                    android:layout_marginBottom="16dp"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0">
 
@@ -60,7 +61,7 @@
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     android:layout_gravity="top"
-                    android:layout_marginBottom="48dp"
+                    android:layout_marginBottom="32dp"
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
             <android.support.design.widget.TabLayout
@@ -74,17 +75,6 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="115dp"
-            android:layout_marginHorizontal="16dp"
-            android:tint="@android:color/white"
-            app:backgroundTint="@color/carButton"
-            app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="top|end"
-            app:srcCompat="@drawable/ic_open_existing_ride"/>
     <android.support.v4.view.ViewPager
             android:id="@+id/viewpager_main"
             android:layout_width="match_parent"
