--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ToolbarLayoutEventRides" parent="@android:style/TextAppearance">
+        <item name="android:textSize">22sp</item>
+        <item name="android:layout_toEndOf">@id/tv_description</item>
+    </style>
+
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:colorAccent">@color/errorRed</item>
         <item name="android:textColor">#000000</item>
