--- a/app/src/main/res/layout/activity_eventrides.xml
+++ b/app/src/main/res/layout/activity_eventrides.xml
@@ -24,6 +24,7 @@
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:toolbarId="@+id/toolbar"
+                app:expandedTitleMarginBottom="40dp"
                 app:expandedTitleTextAppearance="@style/ToolbarLayoutEventRides"
                 tools:title="Josh's Bat-Mitzva">
 
@@ -32,7 +33,7 @@
                     android:layout_height="match_parent"
                     android:gravity="start|top"
                     android:orientation="vertical"
-                    android:paddingBottom="4dp"
+                    android:padding="8dp"
                     android:layout_marginBottom="16dp"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0">
@@ -68,6 +69,7 @@
                     android:id="@+id/tabs_main"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:layout_gravity="bottom"
                     app:tabMode="fixed"/>
 
