--- a/app/src/main/res/layout/activity_ride_page.xml
+++ b/app/src/main/res/layout/activity_ride_page.xml
@@ -85,11 +85,9 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/mainButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:layout_constraintHorizontal_bias="0.0">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
                 android:id="@+id/details"
@@ -97,6 +95,25 @@
                 android:layout_height="wrap_content"
                 android:text="@string/ride_details"/>
     </android.support.constraint.ConstraintLayout>
+
+    <Button
+            android:text="@string/ride_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rideMapButton"
+            style="@style/Widget.AppCompat.Button.Colored"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailsLayout"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="@string/join_ride"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/mainActionButton"
+            style="@style/Widget.AppCompat.Button.Colored"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rideMapButton"
+            app:layout_constraintStart_toStartOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/ride_page_recyclerview"
@@ -107,15 +124,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/mainButton"/>
-    <Button
-            android:text="@string/join_ride"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/mainButton"
-            style="@style/Widget.AppCompat.Button.Colored"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detailsLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"/>
+            android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/mainActionButton"/>
 </android.support.constraint.ConstraintLayout>
