--- a/app/src/main/res/layout/facebook_event.xml
+++ b/app/src/main/res/layout/facebook_event.xml
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:text=""/>
+                android:text="" android:textStyle="bold"/>
 
         <TextView
                 android:padding="2dp"
