--- a/app/src/main/res/layout/welcome_slide3.xml
+++ b/app/src/main/res/layout/welcome_slide3.xml
@@ -23,7 +23,7 @@
                 android:textSize="18sp"/>
         <ImageView
                 android:layout_width="301dp"
-                android:layout_height="254dp" app:srcCompat="@drawable/slide_3"
+                android:layout_height="254dp" app:srcCompat="@drawable/meet_slider"
                 android:id="@+id/imageView4"/>
 
     </LinearLayout>
