--- a/app/src/main/res/layout/user_ride.xml
+++ b/app/src/main/res/layout/user_ride.xml
@@ -3,7 +3,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,7 +15,7 @@
         app:cardUseCompatPadding="true"
 >
 
-    <RelativeLayout
+    <LinearLayout
             android:layout_gravity="center"
             android:padding="10dp"
             android:orientation="horizontal"
@@ -24,49 +24,69 @@
 
         <ImageView
                 android:id="@+id/img"
-                android:layout_marginRight="8dp"
-                android:layout_width="100dp" android:layout_height="100dp"/>
-        <TextView
-                android:padding="2dp"
-                android:layout_toRightOf="@id/img"
-                android:textColor="@android:color/black"
-                android:id="@+id/driverName"
+                android:layout_marginEnd="8dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                tools:src="@drawable/placeholder_profile_circle"
+                tools:ignore="ContentDescription"/>
+
+        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="" android:textStyle="bold" android:textSize="18sp"/>
+                android:orientation="vertical">
+            <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+                <TextView
+                        android:textColor="@android:color/black"
+                        android:id="@+id/driverName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:text=""
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        tools:text="driver name"/>
 
-        <TextView
-                android:padding="2dp"
-                android:layout_toRightOf="@id/img"
-                android:layout_below="@id/driverName"
-                android:textColor="@android:color/black"
-                android:id="@+id/eventName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" android:textSize="16sp"/>
+                <TextView
+                        android:textColor="@android:color/black"
+                        android:id="@+id/passengerCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:text=""
+                        tools:text="6/9"/>
+            </RelativeLayout>
+            <TextView
+                    android:textColor="@android:color/black"
+                    android:id="@+id/eventName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="16sp"
+                    tools:text="event name"/>
 
-        <TextView
-                android:padding="2dp"
-                android:layout_toRightOf="@id/img"
-                android:layout_below="@id/eventName"
-                android:textColor="@android:color/black"
-                android:id="@+id/eventLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""/>
+            <TextView
+                    android:textColor="@android:color/black"
+                    android:id="@+id/eventLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    tools:text="event location"/>
 
-        <TextView
-                android:padding="2dp"
-                android:layout_toRightOf="@id/img"
-                android:layout_below="@id/eventLocation"
-                android:textColor="@android:color/black"
-                android:id="@+id/eventDateTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""/>
+            <TextView
+                    android:textColor="@android:color/black"
+                    android:id="@+id/eventDateTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    tools:text="event date"/>
+        </LinearLayout>
 
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
