Improve disabled color button in RidePageActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="firstScreen">#006064</color>
     <color name="confirmation">#04B518</color>
     <color name="routeColor">#0055ff</color>
+    <color name="disabledGrey">#AAAAAA</color>
     <!--template colors-->
 
 
